--- a/package.json
+++ b/package.json
@@ -9,8 +9,9 @@
     "node": "18.x"
   },
   "dependencies": {
-    "express": "^4.18.2",
+    "compression": "^1.8.1",
+    "cors": "^2.8.5",
     "dotenv": "^16.0.3",
-    "cors": "^2.8.5"
+    "express": "^4.18.2"
   }
 }
